# RustyC

./: CMakeLists.txt  README.md  a.out  build.py  build_and_run.py  build_and_test.py  main.cc  test.rc  test.rs
cmake/: AddLLVM.cmake  FetchExternal.cmake  FindLLVM.cmake  Testing.cmake
draft/: main.cc
src/: CMakeLists.txt
src/rusty_c/: CMakeLists.txt  main.cc
src/rusty_c/Frontend/: CodeGen.hpp  Diagnostic.def  Diagnostic.hpp  Lexer.cpp  Parser.cpp  Parser.hpp  Syntax.cpp  Syntax.hpp  Token.hpp  TokenKind.def  Visitor.hpp  common.hpp
src/rusty_c/Frontend/CodeGen/: IRGen.cpp  IRGen.hpp
src/rusty_c/Frontend/Sema/: Scope.cpp  Scope.hpp  Sema.cpp  Sema.hpp
src/rusty_c/frontend/: Diagnostic.cpp  Diagnostic.def  Diagnostic.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Syntax.cpp  Syntax.hpp  Token.cpp  Token.hpp  TokenKind.cpp  TokenKind.def  TokenKind.hpp  Types.cpp  Types.hpp  Visitor.cpp  common.hpp
src/rusty_c/frontend/Sema/: Scope.cpp  Scope.hpp  Sema.cpp  Sema.hpp
src/rusty_c/utils/: marco.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt
test/rusty_c_test/: CMakeLists.txt  frontend_test.cpp
